{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 637,
  "lineage": "899f23e1-1c12-231f-e34b-0f29dabac098",
  "resources": [
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/ft-iac-trois-39878/regions/us-central1/instanceGroups/ft-iac-trois-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-12-12T02:39:33.351-08:00",
            "enable_cdn": false,
            "external_managed_migration_testing_percentage": 0,
            "fingerprint": "woLL7ysVn_I=",
            "generated_id": 5908443923568021002,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/ft-iac-trois-39878/global/healthChecks/ft-iac-trois-hc-global"
            ],
            "id": "projects/ft-iac-trois-39878/global/backendServices/ft-iac-trois-backend-global",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "optional_mode": "EXCLUDE_ALL_OPTIONAL",
                "sample_rate": 1
              }
            ],
            "name": "ft-iac-trois-backend-global",
            "port_name": "http",
            "project": "ft-iac-trois-39878",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ft-iac-trois-39878/global/backendServices/ft-iac-trois-backend-global",
            "session_affinity": "GENERATED_COOKIE",
            "timeout_sec": 10
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.autoscaling.google_compute_instance_template.app_template",
            "module.autoscaling.google_compute_region_instance_group_manager.app_mig",
            "module.database.google_sql_database.database",
            "module.database.google_sql_database_instance.instance",
            "module.database.google_sql_user.users",
            "module.database.random_password.password",
            "module.loadbalancer.google_compute_health_check.hc",
            "module.network.google_compute_firewall.allow_web",
            "module.network.google_compute_global_address.private_ip_address",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.subnet",
            "module.network.google_service_networking_connection.private_vpc_connection",
            "module.project.google_project.project",
            "module.project.google_project_service.cloudresourcemanager",
            "module.project.google_project_service.compute_api",
            "module.project.google_project_service.dns_api",
            "module.project.google_project_service.domains_api",
            "module.project.google_project_service.networks_api",
            "module.project.random_id.project_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "136.110.129.68",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-12-12T02:39:21.392-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/ft-iac-trois-39878/global/addresses/ft-iac-trois-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "ft-iac-trois-ip",
            "prefix_length": 0,
            "project": "ft-iac-trois-39878",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ft-iac-trois-39878/global/addresses/ft-iac-trois-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.project.google_project.project",
            "module.project.google_project_service.cloudresourcemanager",
            "module.project.google_project_service.compute_api",
            "module.project.google_project_service.dns_api",
            "module.project.google_project_service.domains_api",
            "module.project.google_project_service.networks_api",
            "module.project.random_id.project_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "external_managed_backend_bucket_migration_testing_percentage": 0,
            "forwarding_rule_id": 1121727486633594399,
            "id": "projects/ft-iac-trois-39878/global/forwardingRules/ft-iac-trois-frontend-global",
            "ip_address": "136.110.129.68",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "ft-iac-trois-frontend-global",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "ft-iac-trois-39878",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ft-iac-trois-39878/global/forwardingRules/ft-iac-trois-frontend-global",
            "target": "https://www.googleapis.com/compute/v1/projects/ft-iac-trois-39878/global/targetHttpProxies/ft-iac-trois-proxy-global"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.loadbalancer.google_compute_global_address.default",
            "module.loadbalancer.google_compute_target_http_proxy.proxy",
            "module.loadbalancer.google_compute_url_map.https_redirect",
            "module.project.google_project.project",
            "module.project.google_project_service.cloudresourcemanager",
            "module.project.google_project_service.compute_api",
            "module.project.google_project_service.dns_api",
            "module.project.google_project_service.domains_api",
            "module.project.google_project_service.networks_api",
            "module.project.random_id.project_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "external_managed_backend_bucket_migration_testing_percentage": 0,
            "forwarding_rule_id": 839578462050471880,
            "id": "projects/ft-iac-trois-39878/global/forwardingRules/ft-iac-trois-https-frontend",
            "ip_address": "136.110.129.68",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "ft-iac-trois-https-frontend",
            "network_tier": "PREMIUM",
            "port_range": "443-443",
            "project": "ft-iac-trois-39878",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ft-iac-trois-39878/global/forwardingRules/ft-iac-trois-https-frontend",
            "target": "https://www.googleapis.com/compute/v1/projects/ft-iac-trois-39878/global/targetHttpsProxies/ft-iac-trois-https-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.autoscaling.google_compute_instance_template.app_template",
            "module.autoscaling.google_compute_region_instance_group_manager.app_mig",
            "module.database.google_sql_database.database",
            "module.database.google_sql_database_instance.instance",
            "module.database.google_sql_user.users",
            "module.database.random_password.password",
            "module.loadbalancer.google_compute_backend_service.backend",
            "module.loadbalancer.google_compute_global_address.default",
            "module.loadbalancer.google_compute_health_check.hc",
            "module.loadbalancer.google_compute_managed_ssl_certificate.sub_cert",
            "module.loadbalancer.google_compute_target_https_proxy.proxy",
            "module.loadbalancer.google_compute_url_map.lb",
            "module.network.google_compute_firewall.allow_web",
            "module.network.google_compute_global_address.private_ip_address",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.subnet",
            "module.network.google_service_networking_connection.private_vpc_connection",
            "module.project.google_project.project",
            "module.project.google_project_service.cloudresourcemanager",
            "module.project.google_project_service.compute_api",
            "module.project.google_project_service.dns_api",
            "module.project.google_project_service.domains_api",
            "module.project.google_project_service.networks_api",
            "module.project.random_id.project_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-12T02:39:32.967-08:00",
            "fingerprint": "lrHHD0JoUZM=",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/ft-iac-trois-39878/global/targetHttpProxies/ft-iac-trois-proxy-global",
            "name": "ft-iac-trois-proxy-global",
            "project": "ft-iac-trois-39878",
            "proxy_bind": false,
            "proxy_id": 4724752169446034955,
            "self_link": "https://www.googleapis.com/compute/v1/projects/ft-iac-trois-39878/global/targetHttpProxies/ft-iac-trois-proxy-global",
            "url_map": "https://www.googleapis.com/compute/v1/projects/ft-iac-trois-39878/global/urlMaps/ft-iac-trois-https-redirect"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.loadbalancer.google_compute_url_map.https_redirect",
            "module.project.google_project.project",
            "module.project.google_project_service.cloudresourcemanager",
            "module.project.google_project_service.compute_api",
            "module.project.google_project_service.dns_api",
            "module.project.google_project_service.domains_api",
            "module.project.google_project_service.networks_api",
            "module.project.random_id.project_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-12T02:40:27.259-08:00",
            "fingerprint": "5_LHRz9eGaQ=",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/ft-iac-trois-39878/global/targetHttpsProxies/ft-iac-trois-https-proxy",
            "name": "ft-iac-trois-https-proxy",
            "project": "ft-iac-trois-39878",
            "proxy_bind": false,
            "proxy_id": 7695202064470003700,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ft-iac-trois-39878/global/targetHttpsProxies/ft-iac-trois-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/ft-iac-trois-39878/global/sslCertificates/ft-iac-trois-cert-sub"
            ],
            "tls_early_data": "DISABLED",
            "url_map": "https://www.googleapis.com/compute/v1/projects/ft-iac-trois-39878/global/urlMaps/ft-iac-trois-lb-global"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.autoscaling.google_compute_instance_template.app_template",
            "module.autoscaling.google_compute_region_instance_group_manager.app_mig",
            "module.database.google_sql_database.database",
            "module.database.google_sql_database_instance.instance",
            "module.database.google_sql_user.users",
            "module.database.random_password.password",
            "module.loadbalancer.google_compute_backend_service.backend",
            "module.loadbalancer.google_compute_health_check.hc",
            "module.loadbalancer.google_compute_managed_ssl_certificate.sub_cert",
            "module.loadbalancer.google_compute_url_map.lb",
            "module.network.google_compute_firewall.allow_web",
            "module.network.google_compute_global_address.private_ip_address",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.subnet",
            "module.network.google_service_networking_connection.private_vpc_connection",
            "module.project.google_project.project",
            "module.project.google_project_service.cloudresourcemanager",
            "module.project.google_project_service.compute_api",
            "module.project.google_project_service.dns_api",
            "module.project.google_project_service.domains_api",
            "module.project.google_project_service.networks_api",
            "module.project.random_id.project_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "https_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-12T02:39:21.416-08:00",
            "default_custom_error_response_policy": [],
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "MOVED_PERMANENTLY_DEFAULT",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "Qf_E_N8xdyg=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/ft-iac-trois-39878/global/urlMaps/ft-iac-trois-https-redirect",
            "map_id": 4137024511039393334,
            "name": "ft-iac-trois-https-redirect",
            "path_matcher": [],
            "project": "ft-iac-trois-39878",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ft-iac-trois-39878/global/urlMaps/ft-iac-trois-https-redirect",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.project.google_project.project",
            "module.project.google_project_service.cloudresourcemanager",
            "module.project.google_project_service.compute_api",
            "module.project.google_project_service.dns_api",
            "module.project.google_project_service.domains_api",
            "module.project.google_project_service.networks_api",
            "module.project.random_id.project_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-12T02:40:15.742-08:00",
            "default_custom_error_response_policy": [],
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/ft-iac-trois-39878/global/backendServices/ft-iac-trois-backend-global",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "Sld1fI12IIw=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/ft-iac-trois-39878/global/urlMaps/ft-iac-trois-lb-global",
            "map_id": 174745618010755040,
            "name": "ft-iac-trois-lb-global",
            "path_matcher": [],
            "project": "ft-iac-trois-39878",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ft-iac-trois-39878/global/urlMaps/ft-iac-trois-lb-global",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.autoscaling.google_compute_instance_template.app_template",
            "module.autoscaling.google_compute_region_instance_group_manager.app_mig",
            "module.database.google_sql_database.database",
            "module.database.google_sql_database_instance.instance",
            "module.database.google_sql_user.users",
            "module.database.random_password.password",
            "module.loadbalancer.google_compute_backend_service.backend",
            "module.loadbalancer.google_compute_health_check.hc",
            "module.network.google_compute_firewall.allow_web",
            "module.network.google_compute_global_address.private_ip_address",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.subnet",
            "module.network.google_service_networking_connection.private_vpc_connection",
            "module.project.google_project.project",
            "module.project.google_project_service.cloudresourcemanager",
            "module.project.google_project_service.compute_api",
            "module.project.google_project_service.dns_api",
            "module.project.google_project_service.domains_api",
            "module.project.google_project_service.networks_api",
            "module.project.random_id.project_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-11T07:30:28.800-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ft-iac-trois-39878/global/firewalls/ft-iac-trois-allow-web-ssh",
            "log_config": [],
            "name": "ft-iac-trois-allow-web-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/ft-iac-trois-39878/global/networks/ft-iac-trois-vpc",
            "params": [],
            "priority": 1000,
            "project": "ft-iac-trois-39878",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ft-iac-trois-39878/global/firewalls/ft-iac-trois-allow-web-ssh",
            "source_ranges": [
              "0.0.0.0/0",
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.project.google_project.project",
            "module.project.google_project_service.cloudresourcemanager",
            "module.project.google_project_service.compute_api",
            "module.project.google_project_service.dns_api",
            "module.project.google_project_service.domains_api",
            "module.project.google_project_service.networks_api",
            "module.project.random_id.project_suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.210.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-12-11T07:30:28.392-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/ft-iac-trois-39878/global/addresses/ft-iac-trois-private-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "ft-iac-trois-private-ip",
            "network": "https://www.googleapis.com/compute/v1/projects/ft-iac-trois-39878/global/networks/ft-iac-trois-vpc",
            "prefix_length": 16,
            "project": "ft-iac-trois-39878",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ft-iac-trois-39878/global/addresses/ft-iac-trois-private-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.project.google_project.project",
            "module.project.google_project_service.cloudresourcemanager",
            "module.project.google_project_service.compute_api",
            "module.project.google_project_service.dns_api",
            "module.project.google_project_service.domains_api",
            "module.project.google_project_service.networks_api",
            "module.project.random_id.project_suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/ft-iac-trois-39878/global/networks/ft-iac-trois-vpc",
            "mtu": 0,
            "name": "ft-iac-trois-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "373840145571863912",
            "numeric_id": "373840145571863912",
            "project": "ft-iac-trois-39878",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ft-iac-trois-39878/global/networks/ft-iac-trois-vpc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.project.google_project.project",
            "module.project.google_project_service.cloudresourcemanager",
            "module.project.google_project_service.compute_api",
            "module.project.google_project_service.dns_api",
            "module.project.google_project_service.domains_api",
            "module.project.google_project_service.networks_api",
            "module.project.random_id.project_suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-11T07:30:29.144-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/ft-iac-trois-39878/regions/us-central1/routers/ft-iac-trois-router",
            "name": "ft-iac-trois-router",
            "network": "https://www.googleapis.com/compute/v1/projects/ft-iac-trois-39878/global/networks/ft-iac-trois-vpc",
            "project": "ft-iac-trois-39878",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ft-iac-trois-39878/regions/us-central1/routers/ft-iac-trois-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.project.google_project.project",
            "module.project.google_project_service.cloudresourcemanager",
            "module.project.google_project_service.compute_api",
            "module.project.google_project_service.dns_api",
            "module.project.google_project_service.domains_api",
            "module.project.google_project_service.networks_api",
            "module.project.random_id.project_suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "ft-iac-trois-39878/us-central1/ft-iac-trois-router/ft-iac-trois-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "ft-iac-trois-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "ft-iac-trois-39878",
            "region": "us-central1",
            "router": "ft-iac-trois-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router",
            "module.project.google_project.project",
            "module.project.google_project_service.cloudresourcemanager",
            "module.project.google_project_service.compute_api",
            "module.project.google_project_service.dns_api",
            "module.project.google_project_service.domains_api",
            "module.project.google_project_service.networks_api",
            "module.project.random_id.project_suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-11T07:30:28.663-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/ft-iac-trois-39878/regions/us-central1/subnetworks/ft-iac-trois-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "ft-iac-trois-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/ft-iac-trois-39878/global/networks/ft-iac-trois-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ft-iac-trois-39878",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ft-iac-trois-39878/regions/us-central1/subnetworks/ft-iac-trois-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 3976911153901559163
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.project.google_project.project",
            "module.project.google_project_service.cloudresourcemanager",
            "module.project.google_project_service.compute_api",
            "module.project.google_project_service.dns_api",
            "module.project.google_project_service.domains_api",
            "module.project.google_project_service.networks_api",
            "module.project.random_id.project_suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}